<resources>
    <string name="app_name">Catchy Craft</string>
    <string name="signup">Sign Up</string>
    <string name="already">Already have an account ?</string>
    <string name="signin">Sign In</string>
    <string name="name">Enter your Name :</string>
    <string name="phoneNum">Enter your phone number :</string>
    <string name="heading">Heading</string>
    <string name="des">Description about what you looking at :</string>
    <string name="price">If you have a expected price let us know :</string>
    <string name="create">Create my post</string>
    <string name="submitBtn">submitBtn</string>
    <string name="submitBtn1">SUBMIT</string>
    <string name="home">PUBLIC INQUIRIES…</string>
    <string name="head1">LOOKING FOR HANDMADE CARDS</string>
    <string name="head2">LOOKING FOR A USED COCONUT SHELL TEA SET</string>
    <string name="head3">LOOKING FOR A DIY JEWELLERY</string>
    <string name="des1">I need to contact someone who create customize birthday cards using paper flowers</string>
    <string name="des2">I need a coconut shell tea cup set for low price. Its okay if it is a used one, but set has to be not without any damagers</string>
    <string name="des3">Im looking for a handmade diy jewelleries, such as paper earrings, pebble neckless..</string>
    <string name="phone1">Contact Number: 072-XXXXXXX</string>
    <string name="phone2">Contact Number: 075-XXXXXXX</string>
    <string name="phone3">Contact Number: 077-XXXXXXX</string>
    <string name="price2">excepected price : LKR 2000 or below </string>
    <string name="view">VIEW MY INQUIRIES</string>
    <string name="updateBtn">UPDATE INQUIRY</string>
    <string name="deleteBtn">DELETE INQUIRY</string>
    <string name="UpPhone">Update your phone number</string>
    <string name="UpHead">Update your heading</string>
    <string name="UpDes">Update your description</string>
    <string name="UpPrice">Update price</string>
    <string name="delete">SUCCESSFULLY DELETED</string>
    <string name="update">SUCCESSFULLY UPDATED</string>
    <string name="chathumi_rubasingha">Chathumi Rubasingha</string>
    <string name="Topic01">Register</string>
    <string name="F_Name">First Name</string>
    <string name="L_Name">Last Name</string>
    <string name="Password">Password</string>
    <string name="C_Password">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="DOB">DOB</string>
    <string name="Register">SIGN IN</string>
    <string name="All_reddy_have_account"> All reddy have an account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="User_Name">User name</string>
    <string name="Topic02">Login</string>
    <string name="Topic03">User profile</string>
    <string name="Topic04">Seller profile</string>
    <string name="Google">Google</string>
    <string name="fb">Facebook</string>
    <string name="Update_button">Update</string>
    <string name="Delete_button">Delete</string>
    <string name="Save_button">Save Changes</string>
    <string name="Delete_Successful">Delete Successful</string>
    <string name="Update_Successful">Update Successful</string>
    <string name="Phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="Login">Button</string>
    <string name="Singnup">Sign up</string>
    <string name="todo1">TODO</string>
    <string name="button8">Get Start</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now?</string>
    <string name="Topic06">Next</string>
    <string name="Topic07">Seller Profile</string>
    <string name="todo12">TODO</string>
    <string name="NIC">NIC</string>
    <string name="seller_id">Seller ID</string>
    <string name="C_id">Customer ID</string>
    <string name="topic_08">My Shop</string>
    <string name="topic_09">Create inquiry </string>

</resources>


